[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/hud/hud.gd" type="Script" id=1]
[ext_resource path="res://resources/styles/settings_background.tres" type="StyleBox" id=2]
[ext_resource path="res://addons/monitor_overlay/monitor_overlay.gd" type="Script" id=3]
[ext_resource path="res://scenes/settings/button.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/fonts/settings_font.tres" type="DynamicFont" id=5]

[node name="HUDLayers" type="CanvasLayer"]

[node name="HUD" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="GameOver" type="PanelContainer" parent="HUD"]
unique_name_in_owner = true
visible = false
margin_left = 510.0
margin_top = 298.0
margin_right = 514.0
margin_bottom = 302.0
mouse_filter = 2
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/GameOver"]
margin_left = 2.0
margin_top = 2.0
margin_right = 222.0
margin_bottom = 60.0

[node name="Header" type="CenterContainer" parent="HUD/GameOver/VBoxContainer"]
margin_right = 220.0
margin_bottom = 21.0

[node name="Label" type="Label" parent="HUD/GameOver/VBoxContainer/Header"]
margin_left = 63.0
margin_right = 157.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 5 )
text = "Game Over"

[node name="Space" type="CenterContainer" parent="HUD/GameOver/VBoxContainer"]
margin_top = 25.0
margin_right = 220.0
margin_bottom = 25.0

[node name="Buttons" type="CenterContainer" parent="HUD/GameOver/VBoxContainer"]
margin_top = 29.0
margin_right = 220.0
margin_bottom = 58.0

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/GameOver/VBoxContainer/Buttons"]
margin_right = 220.0
margin_bottom = 29.0
custom_constants/separation = 20

[node name="Exit" parent="HUD/GameOver/VBoxContainer/Buttons/HBoxContainer" instance=ExtResource( 4 )]
margin_right = 100.0
margin_bottom = 29.0
rect_min_size = Vector2( 100, 0 )
text = "Exit"

[node name="Retry" parent="HUD/GameOver/VBoxContainer/Buttons/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 120.0
margin_right = 220.0
margin_bottom = 29.0
rect_min_size = Vector2( 100, 0 )
text = "Retry"

[node name="End" type="PanelContainer" parent="HUD"]
unique_name_in_owner = true
visible = false
margin_left = 510.0
margin_top = 298.0
margin_right = 514.0
margin_bottom = 302.0
mouse_filter = 2
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/End"]
margin_left = 2.0
margin_top = 2.0
margin_right = 102.0
margin_bottom = 60.0

[node name="Header" type="CenterContainer" parent="HUD/End/VBoxContainer"]
margin_right = 100.0
margin_bottom = 21.0

[node name="Label" type="Label" parent="HUD/End/VBoxContainer/Header"]
margin_left = 34.0
margin_right = 65.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 5 )
text = "End"

[node name="Space" type="CenterContainer" parent="HUD/End/VBoxContainer"]
margin_top = 25.0
margin_right = 100.0
margin_bottom = 25.0

[node name="Buttons" type="CenterContainer" parent="HUD/End/VBoxContainer"]
margin_top = 29.0
margin_right = 100.0
margin_bottom = 58.0

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/End/VBoxContainer/Buttons"]
margin_right = 100.0
margin_bottom = 29.0
custom_constants/separation = 20

[node name="Exit" parent="HUD/End/VBoxContainer/Buttons/HBoxContainer" instance=ExtResource( 4 )]
margin_right = 100.0
margin_bottom = 29.0
rect_min_size = Vector2( 100, 0 )
text = "Exit"

[node name="MonitorOverlay" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
graph_height = 25
process = true
physics_process = true
orphan_nodes = true
objects_drawn = true
vertices_drawn = true
draw_calls_3d = true

[connection signal="pressed" from="HUD/GameOver/VBoxContainer/Buttons/HBoxContainer/Exit" to="HUD" method="_on_Exit_pressed"]
[connection signal="pressed" from="HUD/GameOver/VBoxContainer/Buttons/HBoxContainer/Retry" to="HUD" method="_on_Retry_pressed"]
[connection signal="pressed" from="HUD/End/VBoxContainer/Buttons/HBoxContainer/Exit" to="HUD" method="_on_Exit_pressed"]
